<resources>
    <string name="app_name">CalculMental</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jouer">Jouer</string>
    <string name="options">Options</string>
    <string name="scores">Scores</string>
    <string name="niveau">Niveau</string>
    <string name="mode">Mode de jeu</string>
    <string name="zen">Zen</string>
    <string name="clm">CLM</string>
    <string name="infini">Infini</string>
    <string name="arcade">Arcade</string>
    <string name="valider">Valider</string>
    <string name="temps">Temps\n(en secondes)</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="reprendre">Reprendre</string>
    <string name="recommencer">Recommencer</string>
    <string name="quitter">Quitter</string>
    <string name="fin_de_la_partie">Fin de la partie</string>
    <string name="bien_joue">Bien joué</string>
    <string name="votre_score">Votre score:</string>
    <string name="votre_temps">Votre temps:</string>
    <string name="accueil">Accueil</string>
    <string name="filtrer">Filtrer</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="felicitations">Félicitations</string>
    <string name="nouveau_meilleur_score">Nouveau Meilleur Score</string>
    <string name="quel_est_votre_nom">Quel est votre nom?</string>
    <string name="entrez_votre_nom">Entrez votre nom</string>
    <string name="pause">Pause</string>
</resources>