<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey"
    tools:context=".ui.scores.ScoreParametersFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="70sp"
        android:textStyle="bold"
        android:text="@string/scores" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="italic"
        android:textSize="20sp"
        android:text="Choisissez les options pour voir les scores correspondants"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/niveau"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/levelTextView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/levelSeekBar"
        android:layout_marginHorizontal="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/mode"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textSize="15sp"
            android:id="@+id/clmButton"
            android:text="@string/clm"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textSize="15sp"
            android:id="@+id/infiniButton"
            android:text="@string/infini"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textSize="15sp"
            android:id="@+id/arcadeButton"
            android:text="@string/arcade"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/temps"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeTextView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"/>

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timeSeekBar"
        android:layout_marginHorizontal="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filterButton"
        android:padding="10dp"
        android:layout_marginTop="80dp"
        android:text="@string/filtrer"/>


</LinearLayout>